tests/paczka1/fuzzy1/69034212.err
Error in line 1: rp4pauTyoRC A587 626,0
Error in line 11: MdDjn A587 45,6
Error in line 12: MdDjn S208 8,4
Error in line 13: S208 A982 91,8
Error in line 22: S208 A587 30,8
Error in line 24: S208 A982 76,8
Error in line 26: S208 S208 18,9
Error in line 20: MdDjn A982 1,3
Error in line 25: yBc677qvkuU S208 332,9
